manifest/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      volumes:
        - name: envoy-config
          configMap:
            name: gateway-envoy
      containers:
        - name: envoy
          image: envoyproxy/envoy:latest
          imagePullPolicy: IfNotPresent
          command:
            - "/usr/local/bin/envoy"
          args:
            - "--config-path /etc/envoy/envoy.yaml"
          resources:
            limits:
              memory: 512Mi
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
          ports:
            - containerPort: 10000
              name: app
            - containerPort: 8001
              name: envoy-admin
        - name: server
          image: grpc-health/gateway
          imagePullPolicy: Never
          ports:
            - containerPort: 50002
          env:
            - name: "BACKEND_PORT"
              value: localhost:50001
            - name: "MY_POD_IP"
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50002"]
            initialDelaySeconds: 5
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50002"]
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - name: "http-port"
      protocol: "TCP"
      nodePort: 31000
      targetPort: 50002
      port: 10000
